# discrete_lab_4

./: README.md  pyproject.toml  report.ipynb
src/coding/: base_encoder.py  bytes_io.py  deflate.py  huffmann.py  lz77.py  lz77_strngs.py  lzw.py
